# rustic-git

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs  branch_operations.rs  commit_history.rs  commit_workflows.rs  config_operations.rs  diff_operations.rs  error_handling.rs  file_lifecycle_operations.rs  merge_operations.rs  remote_operations.rs  repository_operations.rs  reset_operations.rs  staging_operations.rs  stash_operations.rs  status_checking.rs  tag_operations.rs
src/: error.rs  lib.rs  repository.rs  types.rs  utils.rs
src/commands/: add.rs  branch.rs  commit.rs  config.rs  diff.rs  files.rs  log.rs  merge.rs  mod.rs  remote.rs  reset.rs  stash.rs  status.rs  tag.rs
