[package]
name = "rustic-git"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "A Rustic Git - clean type-safe API over git cli"
homepage = "https://github.com/eugener/rustic-git"
repository = "https://github.com/eugener/rustic-git"
readme = "README.md"
keywords = ["git", "vcs", "repository", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
